<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cdProfileTitle"
			android:textColor="#ff00ff00"
			android:textStyle="bold" >
		</TextView>

		<LinearLayout
			android:id="@+id/linearLayout1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<Button
				android:id="@+id/button1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:tag="["
				android:text="&lt;-" >
			</Button>

			<Button
				android:id="@+id/button2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:tag="]"
				android:text="->" >
			</Button>
		</LinearLayout>

		<TextView
			android:id="@+id/name"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cdName" >
		</TextView>

		<TextView
			android:id="@+id/birth"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cdDoB" >
		</TextView>

		<TextView
			android:id="@+id/statistics"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cdStatistics" >
		</TextView>

		<TextView
			android:id="@+id/juice"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cdJuice" >
		</TextView>

		<TextView
			android:id="@+id/statistics2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/cdStatistics2" >
		</TextView>

		<TextView
			android:id="@+id/recruitstats"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="20px"
			android:text="" >
		</TextView>

		<TextView
			android:id="@+id/textView5"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="20px"
			android:text="@string/profileHealth"
			android:textStyle="bold" >
		</TextView>

		<LinearLayout
			android:id="@+id/ghealth"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
		</LinearLayout>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="20px"
			android:text="@string/cdSkillNowMax"
			android:textStyle="bold" >
		</TextView>

		<LinearLayout
			android:id="@+id/gskills"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
		</LinearLayout>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingTop="20px"
			android:text="@string/profileCrime"
			android:textStyle="bold" >
		</TextView>

		<LinearLayout
			android:id="@+id/gcrimes"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
		</LinearLayout>

		<Button
			android:id="@+id/profileRemove"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:state_enabled="false"
			android:tag="r"
			android:text="@string/profileRemove" >
		</Button>

		<Button
			android:id="@+id/profileKill"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:state_enabled="false"
			android:tag="k"
			android:text="@string/profileKill" >
		</Button>

		<Button
			android:id="@+id/button3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:tag="n"
			android:text="@string/profileCodeName" >
		</Button>

		<Button
			android:id="@+id/profileGender"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:state_enabled="false"
			android:tag="g"
			android:text="@string/profileFixGender" >
		</Button>

		<Button
			android:id="@+id/button4"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:tag="x"
			android:text="@string/profileContinue" >
		</Button>
	</LinearLayout>

</ScrollView>