<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/content"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/Name"
			android:textStyle="bold" >
		</TextView>

		<TextView
			android:id="@+id/textView2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/Inspiration" >
		</TextView>

		<LinearLayout
			android:id="@+id/gmessages"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
		</LinearLayout>

		<TextView
			android:id="@+id/textView3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingBottom="30dip"
			android:paddingTop="30dip"
			android:text="@string/Copyright" >
		</TextView>

		<Button
			android:id="@+id/buttonA"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:tag="a"
			android:text="@string/titleNew" >
		</Button>

		<LinearLayout
			android:id="@+id/loadsavedgames"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
		</LinearLayout>

		<Button
			android:id="@+id/buttonT"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:tag="t"
			android:text="@string/titleChangeTheme" >
		</Button>

		<Button
			android:id="@+id/buttonH"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:tag="h"
			android:text="@string/titleHighScores" >
		</Button>

		<Button
			android:id="@+id/buttonC"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:tag="c"
			android:text="@string/titleHelp" >
		</Button>

		<Button
			android:id="@+id/buttonL"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:tag="l"
			android:text="@string/titleLicense" >
		</Button>
	</LinearLayout>

</ScrollView>