<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/textView1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/founderTitle"
		android:textStyle="bold" >
	</TextView>

	<TableLayout
		android:id="@+id/tableLayout1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" >

		<TableRow
			android:id="@+id/tableRow1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/founderFirst" >
			</TextView>

			<TextView
				android:id="@+id/first"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="FIRST" >
			</TextView>

			<Button
				android:id="@+id/button1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:tag="a"
				android:text="@string/founderAbutton" >
			</Button>
		</TableRow>

		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/textView4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/founderLast" >
			</TextView>

			<TextView
				android:id="@+id/last"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="LAST" >
			</TextView>

			<Button
				android:id="@+id/button2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:tag="b"
				android:text="@string/founderBbutton" >
			</Button>
		</TableRow>

		<TableRow
			android:id="@+id/tableRow3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/textView7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/founderSex" >
			</TextView>

			<TextView
				android:id="@+id/sex"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="SEX" >
			</TextView>

			<Button
				android:id="@+id/button3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:tag="c"
				android:text="@string/founderCbutton" >
			</Button>
		</TableRow>

		<TableRow
			android:id="@+id/tableRow4"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/textView9"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/founderHistory" >
			</TextView>

			<TextView
				android:id="@+id/history"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="HISTORY" >
			</TextView>

			<Button
				android:id="@+id/button4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:tag="d"
				android:text="@string/founderDbutton" >
			</Button>
		</TableRow>
	</TableLayout>

	<Button
		android:id="@+id/button5"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:tag="e"
		android:text="@string/founderEbutton" >
	</Button>

</LinearLayout>