<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/locationdate"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Location, Date" >
				</TextView>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/money"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:text="@string/moneyString" >
				</TextView>
			</LinearLayout>
		</LinearLayout>

		<TextView
			android:id="@+id/siegeStatus"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
		</TextView>

		<Button
			android:id="@+id/basemodeI"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:tag="i"
			android:text="@string/basemodeI" >
		</Button>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/squadname"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="The Liberal Crime Squad" >
				</TextView>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/activity"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
					android:text="Laying Low"
					android:textStyle="bold" >
				</TextView>
			</LinearLayout>
		</LinearLayout>

		<ViewStub
			android:id="@+id/activesquad"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inflatedId="@+id/activesquad"
			android:layout="@layout/activesquad" >
		</ViewStub>

		<ViewStub
			android:id="@+id/squadprecis"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inflatedId="@+id/squadprecis"
			android:layout="@layout/squadprecis" >
		</ViewStub>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<Button
				android:id="@+id/basemodeOrder"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.33"
				android:tag="o"
				android:text="@string/basemodeOrder" >
			</Button>

			<Button
				android:id="@+id/basemodeNextSquad"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.33"
				android:tag="t"
				android:text="@string/basemodeNextSquad" >
			</Button>

			<Button
				android:id="@+id/basemodeLocation"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.33"
				android:tag="z"
				android:text="@string/basemodeLocation" >
			</Button>
		</LinearLayout>

		<TextView
			android:id="@+id/slogan"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingBottom="0px"
			android:paddingTop="20px"
			android:text="We need a slogan!"
			android:textStyle="bold" >
		</TextView>

		<TextView
			android:id="@+id/flag"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingBottom="20px"
			android:paddingTop="0px"
			android:text=""
			android:textStyle="bold"
			android:typeface="monospace" >
		</TextView>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/textView1"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="--- ACTIVISM ---" >
				</TextView>

				<Button
					android:id="@+id/basemodeF"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="f"
					android:text="@string/basemodeF" >
				</Button>

				<Button
					android:id="@+id/basemodeC"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="c"
					android:text="@string/basemodeC" >
				</Button>

				<Button
					android:id="@+id/basemodeA"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="a"
					android:text="@string/basemodeA" >
				</Button>

				<Button
					android:id="@+id/basemodeB"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="b"
					android:text="@string/basemodeB" >
				</Button>

				<Button
					android:id="@+id/basemodeP"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="p"
					android:text="@string/basemodeP" >
				</Button>

				<Button
					android:id="@+id/basemodeW"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="w"
					android:text="@string/basemodeW" >
				</Button>
			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.5"
				android:orientation="vertical" >

				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="--- PLANNING ---" >
				</TextView>

				<Button
					android:id="@+id/basemodeE"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="e"
					android:text="@string/basemodeE" >
				</Button>

				<Button
					android:id="@+id/basemodeV"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="v"
					android:text="@string/basemodeV" >
				</Button>

				<Button
					android:id="@+id/basemodeR"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="r"
					android:text="@string/basemodeR" >
				</Button>

				<Button
					android:id="@+id/basemodeL"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="l"
					android:text="@string/basemodeL" >
				</Button>

				<Button
					android:id="@+id/basemodeS"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="s"
					android:text="@string/basemodeS" >
				</Button>

				<Button
					android:id="@+id/basemodeX"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:tag="x"
					android:text="@string/basemodeX" >
				</Button>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>

</ScrollView>